# SportsTech_News

./: .env.example  .gitignore  CLAUDE.md  README.md  RSS_IMPLEMENTATION.md  SETUP.md  pyproject.toml
.claude/: plan_web_scraping.md
.github/workflows/: daily_brief.yml
src/: __init__.py  main.py  scraper.py  telegram_bot.py  web_scraper.py
tests/: __init__.py  test_main.py  test_scraper.py  test_telegram_bot.py  test_web_scraper.py
