[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SportsTech_News"
version = "0.1.0"
description = "A Python-based bot that scrapes sports technology news and sends daily briefs via Telegram"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["news", "RSS", "telegram", "bot", "sports-tech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "feedparser>=6.0.12",
]

[project.urls]
Repository = "https://github.com/Pacmega/SportsTech_News"
Issues = "https://github.com/Pacmega/SportsTech_News/issues"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "ruff>=0.13.0",
    "mypy>=1.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
